RESOLVED FIXED308212
[LBSE] Fix some getBBox issues
https://bugs.webkit.org/show_bug.cgi?id=308212
Summary [LBSE] Fix some getBBox issues
Rob Buis
Reported 2026-02-19 03:17:50 PST
Fix some getBBox issues.
Attachments
Rob Buis
Comment 1 2026-02-19 03:21:08 PST
EWS
Comment 2 2026-02-20 08:07:12 PST
Committed 307915@main (272edbae9c8b): <https://commits.webkit.org/307915@main> Reviewed commits have been landed. Closing PR #58997 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-02-20 08:08:11 PST
Note You need to log in before you can comment on or make changes to this bug.