[LBSE] Fix some getBBox issues https://bugs.webkit.org/show_bug.cgi?id=308212

Reviewed by Nikolas Zimmermann.

Fix some getBBox issues by checking more carefully whether child bounding boxes
are valid in container bbox calculations. Also add some logic to always make
getBBox return the empty rectangle for hidden containers (defs/symbol etc.).

* LayoutTests/platform/mac-tahoe-wk2-lbse-text/TestExpectations:
* LayoutTests/platform/mac-tahoe-wk2-lbse-text/imported/w3c/web-platform-tests/svg/types/scripted/SVGGraphicsElement.getBBox-01-expected.txt:
* Source/WebCore/rendering/svg/RenderSVGForeignObject.h:
* Source/WebCore/rendering/svg/RenderSVGImage.h:
* Source/WebCore/rendering/svg/SVGBoundingBoxComputation.cpp:
(WebCore::SVGBoundingBoxComputation::handleRootOrContainer const):
* Source/WebCore/svg/SVGLocatable.cpp:
(WebCore::SVGLocatable::getBBox):

Canonical link: https://commits.webkit.org/307915@main