Source/WebCore/rendering/svg/RenderSVGForeignObject.h
@@ -49,6 +49,8 @@ public:
     FloatRect repaintRectInLocalCoordinates(RepaintRectCalculation = RepaintRectCalculation::Fast) const final { return SVGBoundingBoxComputation::computeRepaintBoundingBox(*this); }
     FloatRect decoratedBoundingBox() const final { return m_viewport; }
 
+    bool isObjectBoundingBoxValid() const { return !m_viewport.isEmpty(); }
+
 private:
     void graphicsElement() const = delete;
     ASCIILiteral renderName() const override { return "RenderSVGForeignObject"_s; }
